# sentinel-monitor

./: .gitignore  Dockerfile  LICENSE  README.md  automate  demo.tape  main.py  pyproject.toml  requirements.txt  targets.yaml
.github/workflow/: ci.yaml
.github/workflows/: publish.yaml
monitor/: checker.py  cli.py  config.py  ssl_utils.py
tests/: test_checker.py  test_cli.py  test_config.py  test_ssl_utils.py
